cmss/main/default/objects/OpportunityLineItem__c/fields/SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>SalesPrice__c</fullName>
    <label>Sales Price</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>